--- a/mrp_bom_standard_price/views/mrp_routing_view.xml
+++ b/mrp_bom_standard_price/views/mrp_routing_view.xml
@@ -3,34 +3,17 @@
     <data>
     
         <record model="ir.ui.view" id="view_mrp_routing_tree_xml">
-            <field name="name">mrp.routing.workcenter.tree</field>
-            <field name="model">mrp.routing.workcenter</field>
+            <field name="name">mrp.routing.tree</field>
+            <field name="model">mrp.routing</field>
             <field name="type">tree</field>
-            <field name="inherit_id" ref="mrp.mrp_routing_workcenter_tree_view"/>
+            <field name="inherit_id" ref="mrp.mrp_routing_tree_view"/>
             <field name="arch" type="xml">
-                    <field name="hour_nbr" position="replace">
-                        <field name="costs_cycle" />
-                        <field name="hour_nbr" widget="float_time_second" sum="Total Time"/>
-                        <field name="costs_hour"/>
-                        <field name="cost_efficiency" />
-                        <field name="total_cost" sum="Total Cost"/>
-                    </field>
-            </field>
-        </record>
-
-        <record model="ir.ui.view" id="view_mrp_routing_form_xml">
-            <field name="name">mrp.routing.workcenter.form</field>
-            <field name="model">mrp.routing.workcenter</field>
-            <field name="inherit_id" ref="mrp.mrp_routing_workcenter_form_view"/>
-            <field name="arch" type="xml">
-                <field name="hour_nbr" position="replace">
-                    <field name="hour_nbr" widget="float_time_second" sum="Total Time"/>
-                    <field name="cost_efficiency" />
-                    <field name="total_cost"/>
+                <field name="company_id" position="before">
+                    <field name="total_hour_nbr" widget="float_time_second" sum="Total Time"/>
+                    <field name="total_cost" sum="Total Cost"/>
                 </field>
             </field>
         </record>
-
         
     </data>
 </openerp>
