[purchase_order_extended] add on purchase view like sale order... now is possible to see the delivered qty

--- a/purchase_order_extended/view/purchase_order_view.xml
+++ b/purchase_order_extended/view/purchase_order_view.xml
@@ -62,6 +62,9 @@
                     <field name="seq"/>
                     <field name="sequence" groups="base.group_system"/>
                 </xpath>
+                <xpath expr="//field[@name='order_line']/tree//field[@name='product_uom']" position="after">
+                    <field name="delivered_qty" groups="base.group_system"/>
+                </xpath>
                 <field name="fiscal_position" position="attributes">
                     <attribute name="on_change">onchange_fiscal_position(fiscal_position, order_line, context)</attribute>
                 </field>
