[account_due_list] add also email send

--- a/account_due_list/views/credit_phonecall_view.xml
+++ b/account_due_list/views/credit_phonecall_view.xml
@@ -13,6 +13,7 @@
                 <field name="date"/>
                 <field name="name"/>
                 <field name="partner_id" invisible="1"/>
+                <field name="invoice_id" />
                 <field name="user_id"/>
                 <field name="create_date" invisible="1"/>
                 <field name="state"/>
