Update various functions and UI elements
This commit enhances several UI elements across multiple views and introduces a 'hide button' context. Also, it adds readonly conditions for certain fields, alters the 'sale_order_id' relation, and includes an 'Edit' button in the 'Order Requirement' grid. The 'temp_bom_id' relation's deletion policy was also updated to 'cascade'. Finally, the module version was bumped.

--- a/sale_order_requirement/views/order_requirement.xml
+++ b/sale_order_requirement/views/order_requirement.xml
@@ -80,6 +80,13 @@
             <field name="type">tree</field>
             <field name="arch" type="xml">
                 <tree string="Order Requirement" colors="blue:state == 'draft'; black:state in ('done'); gray:state == 'cancel'">
+                    <button
+                            string="Edit"
+                            name="action_view_order_requirement"
+                            icon="STOCK_FULLSCREEN"
+                            type="object"
+                            invisible="context.get('hide_button', True)"
+                    />
                     <field name="id" />
                     <field name="sale_order_id"/>
                     <field name="client_order_ref"/>
