--- a/sale_order_requirement/views/mrp_production_view.xml
+++ b/sale_order_requirement/views/mrp_production_view.xml
@@ -14,6 +14,7 @@
                 </filter>
                 <field name="origin" position="after">
                     <field name="sale_id"/>
+                    <field name="analytic_account_id" />
                 </field>
             </field>
         </record>
