Add 'project_id' field and implement related methods
The 'project_id' field has been added to mrp_production_view.xml and mrp_production.py files. This field is populated by a new method '_compute_project_id'. Searching this field triggers '_search_project_id' which leverages the '_get_project_data' and '_accumulate_sale_order_ids' methods. Related xml views and translations have been updated accordingly. Also, the module version has been increased by one.

--- a/sale_order_requirement/views/mrp_production_view.xml
+++ b/sale_order_requirement/views/mrp_production_view.xml
@@ -14,7 +14,8 @@
                 </filter>
                 <field name="origin" position="after">
                     <field name="sale_id"/>
-                    <field name="analytic_account_id" />
+                    <newline/>
+                    <field name="project_id" />
                 </field>
             </field>
         </record>
@@ -69,7 +70,8 @@
                 </xpath>
 
                 <field name="picking_id" position="after">
-                    <field name="analytic_account_id" />
+                    <field name="project_id" />
+                    <field name="analytic_account_id" invisible="1" />
                     <field name="order_requirement_line_id"/>
                     <!--<button colspan="1" name="action_view_order_requirement" context="{'ordreq_line_id': order_requirement_line_id}"-->
                             <!--icon="terp-gtk-select-all" type="object" string="Order Requirement Line"/>-->
